Add arm64 docker build for modeling
Add arm64 docker-build job for modeling  project

Change-Id: I17277176d496544e7ee7b0fa6711776855316184
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/modeling/modeling-toscaparsers-javatoscachecker.yaml
+++ b/jjb/modeling/modeling-toscaparsers-javatoscachecker.yaml
@@ -33,6 +33,30 @@
           skip.docker.push=false
 
 - project:
+    name: modeling-toscaparsers-javatoscachecker-arm64
+    project-name: 'modeling-toscaparsers-javatoscachecker-arm64'
+    project: 'modeling/toscaparsers'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'modeling-toscaparsers-settings'
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    subproject:
+      - 'javatoscachecker':
+          pattern: 'javatoscachecker/**'
+          pom: 'javatoscachecker/pom.xml'
+    jobs:
+      - '{project-name}-{stream}-docker-java-properties-daily':
+         setVersion: 'DontSetVersion'
+         docker-pom: 'javatoscachecker/pom.xml'
+         mvn-profile: 'docker'
+         mvn-params: '-Dmaven.test.skip=true'
+         maven-properties: |
+          skip.docker.build=false
+          skip.docker.tag=false
+          skip.docker.push=false
+
+- project:
     name: modeling-toscaparsers-sonar
     jobs:
       - gerrit-maven-sonar
