Update SDC DCAE-D JJB
Make updates to the DCAE-D JJB to support the Casablanca branch.

* Add new stream for the branch
* Updated CLM and sonar to run on the new branch

Change-Id: I81ca9d6da63f2293a87133ce438bb8d6ff507bc1
Issue-ID: SDC-1913
Signed-off-by: Michael Lando <michael.lando@intl.att.com>

--- a/jjb/sdc/sdc-dcae-d-ci.yaml
+++ b/jjb/sdc/sdc-dcae-d-ci.yaml
@@ -20,6 +20,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'sdc-dcae-d-ci-settings'
     files: '**'
     archive-artifacts: ''
@@ -33,7 +35,7 @@
     build-node: ubuntu1604-builder-4c-4g
     project: 'sdc/dcae-d/ci'
     project-name: 'sdc-dcae-d-ci'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'sdc-dcae-d-ci-settings'
     mvn-params: '-Dsonar.branch={branch}'
     mvn-goals: 'clean install'
@@ -45,5 +47,5 @@
       - gerrit-maven-clm
     project: sdc/dcae-d/ci
     project-name: 'sdc-dcae-d-ci'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'sdc-dcae-d-ci-settings'
