--- a/jjb/sdc/sdc-dcae-d-dt-be-main.yaml
+++ b/jjb/sdc/sdc-dcae-d-dt-be-main.yaml
@@ -14,6 +14,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'sdc-dcae-d-dt-be-main-settings'
     files: '**'
     archive-artifacts: ''
@@ -27,7 +29,7 @@
     build-node: ubuntu1604-builder-4c-4g
     project: 'sdc/dcae-d/dt-be-main'
     project-name: 'sdc-dcae-d-dt-be-main'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'sdc-dcae-d-dt-be-main-settings'
     mvn-params: '-Dsonar.branch={branch}'
     mvn-goals: 'clean install'
@@ -39,5 +41,5 @@
       - gerrit-maven-clm
     project: sdc/dcae-d/dt-be-main
     project-name: 'sdc-dcae-d-dt-be-main'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'sdc-dcae-d-dt-be-main-settings'
