--- a/jjb/sdc/sdc-dcae-d-fe.yaml
+++ b/jjb/sdc/sdc-dcae-d-fe.yaml
@@ -15,6 +15,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'sdc-dcae-d-fe-settings'
     files: '**'
     archive-artifacts: ''
@@ -28,7 +30,7 @@
     build-node: ubuntu1604-builder-4c-4g
     project: 'sdc/dcae-d/fe'
     project-name: 'sdc-dcae-d-fe'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'sdc-dcae-d-fe-settings'
     mvn-params: '-Dsonar.branch={branch}'
     mvn-goals: 'clean install'
@@ -41,5 +43,5 @@
     project: sdc/dcae-d/fe
     project-name: 'sdc-dcae-d-fe'
     build-node: ubuntu1604-builder-4c-2g
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'sdc-dcae-d-fe-settings'
