Update PROM for Release in Casablanca
Change-Id: Ibfdb2975e631d5923633a8e0e2013a3291c734a3
Issue-ID: MUSIC-190
Signed-off-by: Nelson,Thomas(tn1381)(arthurdent3) <tn1381@att.com>

--- a/jjb/music/music-prom.yaml
+++ b/jjb/music/music-prom.yaml
@@ -14,6 +14,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'music-prom-settings'
     files: '**'
     archive-artifacts: ''
