Add casablanca branch jobs for integration repos
Change-Id: I1e4bbffbda775ce9f96d926c452ac3d2c8ac1574
Issue-ID: INT-723
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/integration/integration.yaml
+++ b/jjb/integration/integration.yaml
@@ -20,6 +20,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'integration-settings'
     files: '**'
     archive-artifacts: ''
