--- a/jjb/integration/integration-docker.yaml
+++ b/jjb/integration/integration-docker.yaml
@@ -9,6 +9,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     subproject:
       - 'sniroemulator':
           pom: 'test/mocks/sniroemulator/pom.xml'
