--- a/jjb/oparent/oparent.yaml
+++ b/jjb/oparent/oparent.yaml
@@ -16,6 +16,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'oparent-settings'
     files: '**'
     archive-artifacts: ''
