Add arm64 docker build for msb
Add arm64 docker-build job for msb project:

Change-Id: Idbc5c7b604b52aebd9dd387daeb29f03328838dc
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/msb/msb-apigateway.yaml
+++ b/jjb/msb/msb-apigateway.yaml
@@ -28,6 +28,25 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: msb-apigateway-arm64
+    project-name: 'msb-apigateway-arm64'
+    jobs:
+      - '{project-name}-{stream}-docker-java-version-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          script:
+            !include-raw-escape: 'build-apigateway-docker-image.sh'
+
+    project: 'msb/apigateway'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'msb-apigateway-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+-- project:
     name: msb-apigateway-sonar
     jobs:
       - gerrit-maven-sonar
