--- a/jjb/multicloud/multicloud-openstack-vmware-csit.yaml
+++ b/jjb/multicloud/multicloud-openstack-vmware-csit.yaml
@@ -8,6 +8,8 @@
     stream: 'master'
     functionality:
       - 'functionality1':
-          trigger_jobs: 'multicloud-openstack-vmware-master-docker-java-version-shell-daily'
+          trigger_jobs:
+            -  'multicloud-openstack-vmware-master-docker-java-version-shell-daily'
+            -  'multicloud-openstack-vmware-arm64-master-docker-java-version-shell-daily'
     robot-options: ''
     branch: 'master'
