--- a/jjb/multicloud/multicloud-openstack-vmware-vesagent-java.yaml
+++ b/jjb/multicloud/multicloud-openstack-vmware-vesagent-java.yaml
@@ -24,3 +24,25 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: multicloud-openstack-vmware-vesagent-arm64-java
+    project-name: 'multicloud-openstack-vmware-vesagent-arm64'
+    project: 'multicloud/openstack/vmware'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'multicloud-openstack-vmware-settings'
+    subproject:
+      - 'vesagent':
+          pom: 'vesagent/pom.xml'
+          pattern: 'vesagent/**'
+    jobs:
+      - '{project-name}-{stream}-docker-java-version-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          script:
+            !include-raw-escape: 'build-multicloud-openstack-vmware-vesagent-docker-image.sh'
+          build-node: ubuntu1604-docker-arm64-4c-2g
+    files: '**'
+    archive-artifacts: ''
