--- a/jjb/multicloud/multicloud-openstack-ocata-csit.yaml
+++ b/jjb/multicloud/multicloud-openstack-ocata-csit.yaml
@@ -8,8 +8,12 @@
     stream: 'master'
     functionality:
       - 'functionality1':
-          trigger_jobs: 'multicloud-openstack-master-docker-java-version-shell-daily'
+          trigger_jobs: 
+            - 'multicloud-openstack-master-docker-java-version-shell-daily'
+            - 'multicloud-openstack-arm64-master-docker-java-version-shell-daily'
       - 'hpa-discovery':
-          trigger_jobs: 'multicloud-openstack-master-docker-java-version-shell-daily'
+          trigger_jobs: 
+            - 'multicloud-openstack-master-docker-java-version-shell-daily'
+            - 'multicloud-openstack-arm64-master-docker-java-version-shell-daily'
     robot-options: ''
     branch: 'master'
