Add arm64 docker build for multicloud
Add arm64 docker-build job for multicloud project:

Change-Id: Ib677e0938989ce78342b770611b869bbad2bf2b1
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/multicloud/multicloud-azure-java.yaml
+++ b/jjb/multicloud/multicloud-azure-java.yaml
@@ -27,6 +27,28 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: multicloud-azure-arm64-java
+    project-name: 'multicloud-azure-arm64'
+    project: 'multicloud/azure'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'multicloud-azure-settings'
+    subproject:
+      - 'azure':
+          pom: 'azure/pom.xml'
+          pattern: 'azure/**'
+    jobs:
+      - '{project-name}-{stream}-docker-java-version-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          script:
+            !include-raw-escape: 'build-multicloud-azure-docker-image.sh'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+-- project:
     name: multicloud-azure-sonar
     jobs:
       - gerrit-maven-sonar
