--- a/jjb/multicloud/multicloud-openstack-vmware-java.yaml
+++ b/jjb/multicloud/multicloud-openstack-vmware-java.yaml
@@ -27,6 +27,28 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: multicloud-openstack-vmware-arm64-java
+    project-name: 'multicloud-openstack-vmware-arm64'
+    project: 'multicloud/openstack/vmware'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'multicloud-openstack-vmware-settings'
+    subproject:
+      - 'vio':
+          pom: 'vio/pom.xml'
+          pattern: 'vio/**'
+    jobs:
+      - '{project-name}-{stream}-docker-java-version-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          script:
+            !include-raw-escape: 'build-multicloud-openstack-vmware-docker-image.sh'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+-- project:
     name: multicloud-openstack-vmware-sonar
     jobs:
       - gerrit-maven-sonar
