Add arm64 docker build for music
Add arm64 docker-build job for music project

Change-Id: I9ba7408ed959ea35643a1e09068f4c710327c4c3
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/music/music-distributed-kv-store.yaml
+++ b/jjb/music/music-distributed-kv-store.yaml
@@ -17,3 +17,20 @@
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: music-distributed-kv-store-arm64
+    project-name: 'music-distributed-kv-store-arm64'
+    path: 'src/dkv'
+    jobs:
+      - '{project-name}-{stream}-docker-golang-shell-daily':
+          script:
+            !include-raw-escape: 'build-music-distributed-kv-store-image.sh'
+    project: 'music/distributed-kv-store'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'music-distributed-kv-store-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
