Add arm64 docker build for music
Add arm64 docker-build job for music project

Change-Id: I9ba7408ed959ea35643a1e09068f4c710327c4c3
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/music/music-csit.yaml
+++ b/jjb/music/music-csit.yaml
@@ -8,7 +8,9 @@
      stream: 'master'
      functionality:
        - 'music-test-plan':
-           trigger_jobs: 'music-master-docker-version-java-daily'
+           trigger_jobs:
+             - 'music-master-docker-version-java-daily'
+             - 'music-arm64-master-docker-version-java-daily'
      robot-options: ''
      branch: 'master'
 
