--- a/jjb/music/music-prom.yaml
+++ b/jjb/music/music-prom.yaml
@@ -21,6 +21,23 @@
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
 
+- project:
+    name: music-prom-arm64
+    project-name: 'music-prom-arm64'
+    jobs:
+      - '{project-name}-{stream}-docker-version-java-daily':
+          docker-pom: 'pom.xml'
+          mvn-profile: docker
+          mvn-params: '-Dmaven.test.skip=true'
+    project: 'music/prom'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'music-prom-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
 
 - project:
     name: music-prom-clm
