Add arm64 docker build for oom
Add arm64 docker-build job for oom project

Change-Id: I17700fb396783ee4bc930ef86e04faa26fda3741
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/oom/oom-oneclick-config.yaml
+++ b/jjb/oom/oom-oneclick-config.yaml
@@ -23,6 +23,24 @@
          branch: 'master'
    mvn-settings: 'oom-settings'
 
+- project:
+   name: oomconfig-arm64
+   project-name: 'oomconfig-arm64'
+   project: 'oom'
+
+   files: '**'
+   archive-artifacts: ''
+   build-timeout: 60
+   build-node: ubuntu1604-docker-arm64-4c-2g
+   submodule-recursive: true
+
+   jobs:
+     - '{project}-{stream}-release-config'
+   stream:
+     - 'master':
+         branch: 'master'
+   mvn-settings: 'oom-settings'
+
 - job-template:
     name: '{project}-{stream}-release-config'
     project-type: freestyle
