--- a/jjb/oom/oom-registrator.yaml
+++ b/jjb/oom/oom-registrator.yaml
@@ -21,6 +21,24 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: oom-registrator-arm64
+    project-name: 'oom-registrator-arm64'
+    jobs:
+      - '{project-name}-{stream}-docker-java-version-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          script:
+            !include-raw-escape: 'build-registrator-docker-image.sh'
+    project: 'oom/registrator'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'oom-registrator-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+-- project:
     name: oom-registrator-clm
     jobs:
       - gerrit-maven-clm
