Add Casablanca stream for datarouter jobs
Change-Id: I89bd52eb59879008bac1d10ef1fcbb3b47a3f655
Signed-off-by: Conor Ward <conor.ward@est.tech>
Issue-ID: DMAAP-886

--- a/jjb/dmaap/dmaap-datarouter-csit.yaml
+++ b/jjb/dmaap/dmaap-datarouter-csit.yaml
@@ -5,10 +5,13 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'dmaap-datarouter'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     functionality:
       - 'dr-suite':
           trigger_jobs:
             - '{project-name}-{stream}-docker-java-shell-daily'
     robot-options: ''
-    branch: 'master'
