--- a/jjb/dmaap/dmaap-datarouter.yaml
+++ b/jjb/dmaap/dmaap-datarouter.yaml
@@ -19,6 +19,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'dmaap-datarouter-settings'
     files: '**'
     archive-artifacts: ''
