Update SDC-pubsub JJB
Make updates to the SDC-pubsub to support the Casablanca branch.

* Add new stream for the branch
* Updated CLM and sonar to run on the new branch

Change-Id: I04abdc13465473781d787489db6959f9f7f5ea8a
Issue-ID: SDC-1913
Signed-off-by: Michael Lando <michael.lando@intl.att.com>

--- a/jjb/sdc/sdc-sdc-pubsub.yaml
+++ b/jjb/sdc/sdc-sdc-pubsub.yaml
@@ -17,6 +17,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'sdc-sdc-pubsub-settings'
     files: '**'
     archive-artifacts: ''
@@ -31,7 +33,7 @@
     build-node: ubuntu1604-builder-4c-4g
     project: 'sdc/sdc-pubsub'
     project-name: 'sdc-sdc-pubsub'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'sdc-sdc-pubsub-settings'
     mvn-params: '-Dsonar.branch={branch}'
     mvn-goals: 'clean install'
