--- a/jjb/policy/policy-parent.yaml
+++ b/jjb/policy/policy-parent.yaml
@@ -24,7 +24,7 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily':
-          disabled: false
+          disabled: true
 
     project: 'policy/parent'
     stream:
