--- a/jjb/optf/optf-cmso.yaml
+++ b/jjb/optf/optf-cmso.yaml
@@ -40,6 +40,40 @@
           pom: 'pom.xml'
 
 - project:
+    name: optf-cmso-arm64
+    project-name: 'optf-cmso-arm64'
+    jobs:
+      - '{project-name}-{stream}-verify-java-checkstyle':
+         mvn-params: '-Ddocker.pull.registry=nexus3.onap.org:10001'
+      - '{project-name}-{stream}-merge-properties-java':
+         mvn_properties:
+            - docker.pull.registry=nexus3.onap.org:10001
+            - docker.push.registry=nexus3.onap.org:10003
+      - '{project-name}-{stream}-release-java-daily-checkstyle':
+         setVersion: 'DoSetVersion'
+         mvn_properties:
+          - docker.pull.registry=nexus3.onap.org:10001
+      - '{project-name}-{stream}-docker-java-properties-daily':
+         setVersion: 'DoSetVersion'
+         docker-pom: 'pom.xml'
+         mvn-profile: 'docker'
+         mvn-params: '-Dmaven.test.skip=true'
+         maven-properties: |
+          cmso.registry=$
+
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    project: 'optf/cmso'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'optf-cmso-settings'
+    subproject:
+      - 'cmso':
+          path: '.'
+          pattern: '**'
+          pom: 'pom.xml'
+
+- project:
     name: optf-cmso-sonar
     jobs:
       - gerrit-maven-sonar:
