--- a/jjb/optf/optf-has.yaml
+++ b/jjb/optf/optf-has.yaml
@@ -56,6 +56,35 @@
           build-node: queue-docker-4c-4g
 
 - project:
+    name: optf-has-docker-arm64
+    project-name: 'optf-has-arm64'
+    project: 'optf/has'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'optf-has-settings'
+    subproject:
+      - 'conductor':
+          path: 'conductor'
+          pattern: 'conductor/**'
+          pom: 'pom.xml'
+    jobs:
+      - '{project-name}-{stream}-{subproject}-docker-java-version-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          mvn-params: '-Dmaven.test.skip=true'
+          script:
+            !include-raw-escape: 'build-optf-has-docker-image.sh'
+          build-node: ubuntu1604-docker-arm64-4c-2g
+      - '{project-name}-{stream}-{subproject}-docker-java-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          mvn-params: '-Dmaven.test.skip=true'
+          script:
+            !include-raw-escape: 'build-optf-has-docker-image.sh'
+          build-node: ubuntu1604-docker-arm64-4c-2g
+
+- project:
     name: optf-has-sonar
     jobs:
       - gerrit-maven-sonar
