Add arm64 docker build for optf
Add arm64 docker-build job for optf project

Change-Id: I74d78ed54964c2a3e6969eb3fe276a1f67adbd34
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/optf/optf-has-csit.yaml
+++ b/jjb/optf/optf-has-csit.yaml
@@ -10,6 +10,8 @@
            branch: master
      functionality:
        - 'has':
-           trigger_jobs: 'optf-has-master-conductor-docker-java-version-shell-daily'
+           trigger_jobs:
+             -  'optf-has-master-conductor-docker-java-version-shell-daily'
+             -  'optf-has-arm64-master-conductor-docker-java-version-shell-daily'
      robot-options: ''
      branch: 'master'
