--- a/jjb/optf/optf-cmso-csit.yaml
+++ b/jjb/optf/optf-cmso-csit.yaml
@@ -10,6 +10,8 @@
            branch: master
      functionality:
        - 'cmso':
-           trigger_jobs: 'optf-cmso-master-docker-java-version-shell-daily'
+           trigger_jobs:
+             - 'optf-cmso-master-docker-java-version-shell-daily'
+             - 'optf-cmso-arm64-master-docker-java-version-shell-daily'
      robot-options: ''
      branch: 'master'
