--- a/jjb/optf/optf-osdf-csit.yaml
+++ b/jjb/optf/optf-osdf-csit.yaml
@@ -10,6 +10,8 @@
            branch: master
      functionality:
        - 'osdf':
-           trigger_jobs: 'optf-osdf-master-osdf-docker-java-version-shell-daily'
+           trigger_jobs: 
+             - 'optf-osdf-master-osdf-docker-java-version-shell-daily'
+             - 'optf-osdf-arm4-master-osdf-docker-java-version-shell-daily'
      robot-options: ''
      branch: 'master'
