--- a/jjb/sdc/sdc-dcae-d-ci.yaml
+++ b/jjb/sdc/sdc-dcae-d-ci.yaml
@@ -28,6 +28,24 @@
     build-timeout: 60
 
 - project:
+    name: sdc-dcae-d-ci-arm64
+    project-name: 'sdc-dcae-d-ci-arm64'
+    jobs:
+      - '{project-name}-{stream}-docker-version-java-daily':
+         docker-pom: 'pom.xml'
+         mvn-profile: 'docker'
+         mvn-params: '-DskipTests=true'
+    project: 'sdc/dcae-d/ci'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'sdc-dcae-d-ci-settings'
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    files: '**'
+    archive-artifacts: ''
+    build-timeout: 60
+
+-- project:
     name: sdc-dcae-ci-sonar
     jobs:
       - gerrit-maven-sonar
