Add arm64 docker build for sdc
Add arm64 docker-build job for sdc project

Change-Id: Iacb8328c9224271fae76d7f59df01835b7720e68
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/sdc/sdc.yaml
+++ b/jjb/sdc/sdc.yaml
@@ -52,6 +52,28 @@
     maven-version: 'mvn35'
 
 - project:
+    name: sdc-arm64
+    project-name: 'sdc-arm64'
+    jobs:
+      - '{project-name}-{stream}-sdc-merge-java':
+          docker-pom: 'pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
+      - '{project-name}-{stream}-docker-version-java-daily':
+          docker-pom: 'pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-DskipTests=true -Dnpm.registry=https://nexus.onap.org/content/repositories/npm/'
+    project: 'sdc'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'sdc-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    maven-version: 'mvn35'
+
+- project:
     name: sdc-sonar
     jobs:
       - gerrit-maven-sonar
