--- a/jjb/sdc/sdc-dcae-d-dt-be-main.yaml
+++ b/jjb/sdc/sdc-dcae-d-dt-be-main.yaml
@@ -22,6 +22,24 @@
     build-timeout: 60
 
 - project:
+    name: sdc-dcae-d-dt-be-main-arm64
+    project-name: 'sdc-dcae-d-dt-be-main-arm64'
+    jobs:
+      - '{project-name}-{stream}-docker-version-java-daily':
+          docker-pom: 'pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-DskipTests=true'
+    project: 'sdc/dcae-d/dt-be-main'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'sdc-dcae-d-dt-be-main-settings'
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    files: '**'
+    archive-artifacts: ''
+    build-timeout: 60
+
+- project:
     name: sdc-dcae-d-dt-be-main-sonar
     jobs:
       - gerrit-maven-sonar
