--- a/jjb/sdc/sdc-sdc-docker-base.yaml
+++ b/jjb/sdc/sdc-sdc-docker-base.yaml
@@ -18,3 +18,20 @@
     archive-artifacts: ''
     build-node: ubuntu1604-builder-8c-8g
     maven-version: 'mvn35'
+
+- project:
+    name: sdc-sdc-docker-base-arm64
+    project-name: 'sdc-sdc-docker-base-arm64'
+    jobs:
+      - '{project-name}-{stream}-sdc-merge-java':
+          docker-pom: 'pom.xml'
+          mvn-profile: 'default'
+    project: 'sdc/sdc-docker-base'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'sdc-sdc-docker-base-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    maven-version: 'mvn35'
