Add arm64 docker build for sdnc
Add arm64 docker-build job for sdnc project

Change-Id: I5a85c58a542e7ef29c27c83c1372b6e7b9ac8ec7
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/sdnc/sdnc-apps.yaml
+++ b/jjb/sdnc/sdnc-apps.yaml
@@ -62,6 +62,22 @@
     archive-artifacts: ''
     build-node: queue-docker-4c-4g
 
+- project:
+    name: sdnc-apps-docker-arm64
+    project-name: 'sdnc-apps-arm64'
+    jobs:
+      - 'docker-version-java-daily':
+          docker-pom: 'pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-Dmaven.test.skip=true'
+    project: 'sdnc/apps'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'sdnc-apps-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
 
 - project:
     name: sdnc-apps-clm
