Add arm64 docker build for so
Add arm64 docker-build job for so project

Change-Id: I7791a48a1364f04f53124bd4847f255365982a07
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -28,6 +28,23 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: so-arm64
+    project-name: 'so-arm64'
+    jobs:
+      - '{project-name}-{stream}-docker-version-java-daily':
+          docker-pom: 'pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-Dmaven.test.skip=true'
+    project: 'so'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'so-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+-- project:
     name: so-sonar
     jobs:
       - gerrit-maven-sonar
