--- a/jjb/usecaseui/usecase-ui-server-csit.yaml
+++ b/jjb/usecaseui/usecase-ui-server-csit.yaml
@@ -1,9 +1,9 @@
 - project:
-    name: usecase-ui-server-csit
+    name: usecase-ui-server-csit-arm64
     jobs:
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
-    project-name: 'usecase-ui-server'
+    project-name: 'usecase-ui-server-arm64'
     stream: 'master'
     functionality:
       - 'testsuite':
