--- a/jjb/usecaseui/usecase-ui-server.yaml
+++ b/jjb/usecaseui/usecase-ui-server.yaml
@@ -22,6 +22,23 @@
     build-node: ubuntu1604-builder-4c-4g
 
 - project:
+    name: usecase-ui-server-arm64
+    project-name: 'usecase-ui-server-arm64'
+    project: 'usecase-ui/server'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'usecase-ui-server-settings'
+    jobs:
+      - '{project-name}-{stream}-docker-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+    files: '**'
+    archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: docker
+    build-node: ubuntu1604-docker-arm64-4c-2g
+
+-- project:
     name: usecase-ui-server-sonar
     jobs:
       - gerrit-maven-sonar
