--- a/jjb/usecaseui/usecase-ui-server-csit.yaml
+++ b/jjb/usecaseui/usecase-ui-server-csit.yaml
@@ -10,3 +10,16 @@
           trigger_jobs: '{project-name}-{stream}-docker-java-daily'
     robot-options: ''
     branch: 'master'
+
+- project:
+    name: usecase-ui-server-csit-arm64
+    jobs:
+      - '{project-name}-{stream}-verify-csit-{functionality}'
+      - '{project-name}-{stream}-csit-{functionality}'
+    project-name: 'usecase-ui-server-arm64'
+    stream: 'master'
+    functionality:
+      - 'testsuite':
+          trigger_jobs: '{project-name}-{stream}-docker-java-daily'
+    robot-options: ''
+    branch: 'master'
