Add arm64 docker build for vfc
Add arm64 docker-build job for vfc project

Change-Id: I470885e47c8422389c6c69a1876a23d386922ac9
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/vfc/vfc-gvnfm-vnflcm-csit.yaml
+++ b/jjb/vfc/vfc-gvnfm-vnflcm-csit.yaml
@@ -1,13 +1,13 @@
 ---
 - project:
-    name: vfc-gvnfm-vnflcm-csit
+    name: vfc-gvnfm-vnflcm-csit-arm64
     jobs:
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
-    project-name: 'vfc-gvnfm-vnflcm'
+    project-name: 'vfc-gvnfm-vnflcm-arm64'
     stream: 'master'
     functionality:
       - 'sanity-check':
-          trigger_jobs: 'vfc-gvnfm-vnflcm-master-docker-java-version-shell-daily'
+          trigger_jobs: 'vfc-gvnfm-vnflcm-arm64-master-docker-java-version-shell-daily'
     robot-options: ''
     branch: 'master'
