--- a/jjb/vfc/vfc-nfvo-db.yaml
+++ b/jjb/vfc/vfc-nfvo-db.yaml
@@ -17,3 +17,19 @@
           mvn-goals: 'install'
           script:
             !include-raw-escape: 'build-nfvo-db-docker-image.sh'
+
+- project:
+    name: vfc-nfvo-db-arm64
+    project: 'vfc/nfvo/db-arm64'
+    project-name: 'vfc-nfvo-db'
+    mvn-settings: 'vfc-nfvo-db-settings'
+    stream:
+      - 'master':
+          branch: 'master'
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    jobs:
+      - '{project-name}-{stream}-docker-java-version-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'install'
+          script:
+            !include-raw-escape: 'build-nfvo-db-docker-image.sh'
