--- a/jjb/vfc/vfc-nfvo-wfengine-csit.yaml
+++ b/jjb/vfc/vfc-nfvo-wfengine-csit.yaml
@@ -13,3 +13,18 @@
       - 'vfc-nfvo-wfengine-master-engine-mgr-service-docker-java-version-shell-daily'
     robot-options: ''
     branch: 'master'
+
+- project:
+    name: vfc-nfvo-wfengine-csit-arm64
+    jobs:
+      - '{project-name}-{stream}-verify-csit-{functionality}'
+      - '{project-name}-{stream}-csit-{functionality}'
+    project-name: 'vfc-nfvo-wfengine-arm64'
+    stream: 'master'
+    functionality:
+      - 'sanity-check'
+    trigger_jobs:
+      - 'vfc-nfvo-wfengine-arm64-master-engine-activiti-extension-docker-java-version-shell-daily'
+      - 'vfc-nfvo-wfengine-arm64-master-engine-mgr-service-docker-java-version-shell-daily'
+    robot-options: ''
+    branch: 'master'
