--- a/jjb/vid/vid-csit.yaml
+++ b/jjb/vid/vid-csit.yaml
@@ -14,3 +14,17 @@
       - 'healthCheck':
           trigger_jobs: '{project-name}-{stream}-docker-version-java-daily'
     robot-options: ''
+
+- project:
+    name: vid-csit-arm64
+    jobs:
+      - '{project-name}-{stream}-verify-csit-{functionality}'
+      - '{project-name}-{stream}-csit-{functionality}'
+    project-name: 'vid-arm64'
+    stream:
+      - 'master':
+          branch: 'master'
+    functionality:
+      - 'healthCheck':
+          trigger_jobs: '{project-name}-{stream}-docker-version-java-daily'
+    robot-options: ''
