Add arm64 docker build for vnfsdk
Add arm64 docker-build job for vnfsdk project

Change-Id: Ica0fa9cf3cb583cda4ea4aa2f34c687bfe7e046c
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/vnfsdk/vnfsdk-dovetail-integration-python.yaml
+++ b/jjb/vnfsdk/vnfsdk-dovetail-integration-python.yaml
@@ -33,6 +33,25 @@
           mvn-params: '-Dmaven.test.skip=true'
           build-node: ubuntu1604-docker-8c-8g
 - project:
+    name: vnfsdk-dovetail-integration-arm64
+    project-name: 'vnfsdk-dovetail-integration-arm64'
+    project: 'vnfsdk/dovetail-integration'
+    pom: 'pom.xml'
+    python-version: python2.7
+    tox-dir: '.'
+    tox-envs: ''
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'vnfsdk-dovetail-integration-settings'
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    jobs:
+      - '{project-name}-{stream}-docker-java-daily':
+          docker-pom: 'pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-Dmaven.test.skip=true'
+
+-- project:
     name: vnfsdk-dovetail-integration-tox-sonar
     jobs:
       - gerrit-tox-sonar
