Add arm64 docker build for vnfsdk
Add arm64 docker-build job for vnfsdk project

Change-Id: Ica0fa9cf3cb583cda4ea4aa2f34c687bfe7e046c
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/vnfsdk/vnfsdk-ice-python.yaml
+++ b/jjb/vnfsdk/vnfsdk-ice-python.yaml
@@ -52,6 +52,28 @@
           mvn-params: '-Dmaven.test.skip=true'
 
 - project:
+    name: vnfsdk-ice-docker-arm64
+    project-name: 'vnfsdk-ice-docker-arm64'
+    project: 'vnfsdk/ice'
+    pom: 'pom.xml'
+    stream:
+      - 'master':
+          branch: 'master'
+    subproject:
+      - 'docker':
+          path: 'docker'
+          pattern: 'docker/**'
+          pom: 'docker/pom.xml'
+    mvn-settings: 'vnfsdk-ice-settings'
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    jobs:
+      - '{project-name}-{stream}-{subproject}-merge-java'
+      - '{project-name}-{stream}-docker-version-java-daily':
+          docker-pom: 'docker/pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-Dmaven.test.skip=true'
+
+- project:
     name: vnfsdk-ice-validation-scripts-tox-sonar
     jobs:
       - gerrit-tox-sonar
