Add arm64 docker build for vvp
Add arm64 docker-build job for vvp project

Change-Id: Id8f850d3b42312f71f4ed1c2a47d8920d28838f9
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/vvp/vvp-engagementmgr.yaml
+++ b/jjb/vvp/vvp-engagementmgr.yaml
@@ -21,6 +21,21 @@
     mvn-profile: 'default'
 
 - project:
+    name: vvp-engagementmgr-arm64
+    project-name: 'vvp-engagementmgr-arm64'
+    project: 'vvp/engagementmgr'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'vvp-engagementmgr-settings'
+    build-node: ubuntu1604-docker-8c-8g
+    jobs:
+      - '{project-name}-{stream}-docker-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+    docker-pom: 'pom.xml'
+    mvn-profile: 'default'
+
+-- project:
     name: vvp-engagementmgr-sonar
     jobs:
       - gerrit-maven-sonar
