--- a/jjb/vvp/vvp-image-scanner.yaml
+++ b/jjb/vvp/vvp-image-scanner.yaml
@@ -21,6 +21,21 @@
     mvn-profile: 'default'
 
 - project:
+    name: vvp-image-scanner-arm64
+    project-name: 'vvp-image-scanner-arm64'
+    project: 'vvp/image-scanner'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'vvp-image-scanner-settings'
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    jobs:
+      - '{project-name}-{stream}-docker-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+    docker-pom: 'pom.xml'
+    mvn-profile: 'default'
+
+-- project:
     name: vvp-image-scanner-sonar
     jobs:
       - gerrit-maven-sonar
