Add arm64 docker build for vvp
Add arm64 docker-build job for vvp project

Change-Id: Id8f850d3b42312f71f4ed1c2a47d8920d28838f9
Issue-ID: CIMAN-217
Signed-off-by: Paul Vaduva <Paul.Vaduva@enea.com>

--- a/jjb/vvp/vvp-cms.yaml
+++ b/jjb/vvp/vvp-cms.yaml
@@ -26,6 +26,21 @@
     mvn-profile: 'default'
 
 - project:
+    name: vvp-cms-arm64
+    project-name: 'vvp-cms-arm64'
+    project: 'vvp/cms'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'vvp-cms-settings'
+    build-node: ubuntu1604-docker-arm64-4c-2g
+    jobs:
+      - '{project-name}-{stream}-docker-java-daily':
+          mvn-params: '-Dmaven.test.skip=true'
+    docker-pom: 'pom.xml'
+    mvn-profile: 'default'
+
+- project:
     name: vvp-cms-sonar
     jobs:
       - gerrit-maven-sonar
