Add NPM publish JJB template
Add NPM {project-name}-{stream}-npm-publish JJB
template for NPM publish tasks.
Add npm-publish in sdc-sdc-pubsub project yaml with
the corresponding NPM token.

Change-Id: Ic3ce2818d540215e7d26bb9d6e2c87c767d97f07
Issue-ID: CIMAN-222
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/sdc/sdc-sdc-pubsub.yaml
+++ b/jjb/sdc/sdc-sdc-pubsub.yaml
@@ -38,3 +38,20 @@
     mvn-params: '-Dsonar.branch={branch}'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m'
+
+- project:
+    name: sdc-sdc-pubsub-npm
+    project-name: 'sdc-sdc-pubsub'
+    jobs:
+      - '{project-name}-{stream}-npm-publish':
+          credential-id: sdc-npm-token
+          variable: sdc-token
+    project: 'sdc/sdc-pubsub'
+    stream:
+      - 'master':
+          branch: 'master'
+    mvn-settings: 'sdc-sdc-pubsub-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-timeout: 60
+    maven-version: 'mvn35'
